Fixed bug #40705 (Iterating within function moves original array pointer) Fixed bug #40509 (key() function changed behaviour if global array is used within function)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@240283 c90b9560-bf6c-de11-be94-00142212c4b1